--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RNFirebaseStarter",
+  "name": "manager",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -23,7 +23,9 @@
   "dependencies": {
     "fbjs": "^0.8.16",
     "react": "^16.3.1",
-    "react-native": "^0.55.3",
-    "react-native-firebase": "^4.1.0"
+    "react-native": "^0.55.4",
+    "react-native-firebase": "^4.1.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   }
 }
