--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "^0.55.4",
     "react-native-firebase": "^4.1.0",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
