--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "fbjs": "^0.8.16",
+    "lodash": "^4.17.10",
     "react": "^16.3.1",
     "react-native": "^0.55.4",
     "react-native-firebase": "^4.1.0",
